--- a/src/shared/themes/default/input/common.css
+++ b/src/shared/themes/default/input/common.css
@@ -16,7 +16,7 @@
   --nuraly-color-input-border-focus: #1890ff;
   --nuraly-color-input-border-hover: #40a9ff;
 
-  /* Input sizing - Default Design System (Ant Design style) */
+  /* Input sizing - Default Design System */
   --nuraly-size-input-small-height: 24px;
   --nuraly-size-input-medium-height: 32px;
   --nuraly-size-input-large-height: 40px;
