--- a/src/shared/themes/default/slider-input/common.css
+++ b/src/shared/themes/default/slider-input/common.css
@@ -10,7 +10,7 @@
    * SHARED SLIDER INPUT VARIABLES - DEFAULT DESIGN SYSTEM
    * ======================================== */
 
-  /* Slider input borders - Default Design System (Ant Design style) */
+  /* Slider input borders - Default Design System */
   --nuraly-border-width-slider-input: 0;
   --nuraly-border-slider-input-radius: 6px;
   --nuraly-border-slider-input-thumb-radius: 50%;
