--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -28,6 +28,11 @@
 @import './menu/index.css';
 @import './toast/index.css';
 @import './alert/index.css';
+@import './skeleton/index.css';
+@import './breadcrumb/index.css';
+@import './badge/index.css';
+@import './popconfirm/index.css';
+@import './timeline/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './modal/index.css';
