--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -33,6 +33,7 @@
 @import './badge/index.css';
 @import './popconfirm/index.css';
 @import './timeline/index.css';
+@import './divider/index.css';
 
 
 /* TODO: Import other component themes as they are created
