--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -1,6 +1,11 @@
 /**
- * Carbon Theme - Complete Import
- * Imports the main theme variables and all component-specific styles
+ * Carbon Theme - Complete Impo@import './timeline/index.css';
+@import './image/index.css';
+@import './video/index.css';
+@import './document/index.css';
+
+
+/* TODO: Import other component themes as they are created* Imports the main theme variables and all component-specific styles
  */
 
 /* Import main theme variables */
@@ -34,6 +39,9 @@
 @import './popconfirm/index.css';
 @import './timeline/index.css';
 @import './divider/index.css';
+@import './image/index.css';
+@import './video/index.css';
+@import './document/index.css';
 
 
 /* TODO: Import other component themes as they are created
