--- a/src/shared/themes/default/index.css
+++ b/src/shared/themes/default/index.css
@@ -34,6 +34,9 @@
 @import './popconfirm/index.css';
 @import './timeline/index.css';
 @import './divider/index.css';
+@import './image/index.css';
+@import './video/index.css';
+@import './document/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './modal/index.css';
