--- a/src/shared/themes/carbon/index.css
+++ b/src/shared/themes/carbon/index.css
@@ -43,7 +43,7 @@
 @import './video/index.css';
 @import './document/index.css';
 @import './layout/index.css';
-
+@import './chatbot/index.css';
 
 /* TODO: Import other component themes as they are created
 @import './modal/index.css';
